# slate

./: Cargo.toml  README.md
src/: main.rs
src/core/: audit.rs
src/models/: schedule.rs  subject.rs  week.rs
