[package]
name = "slate"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
time = "0.3.28" # Date / Time
calamine = "0.21.2" # Excell / Spreadsheet
colored = "2.0.4"

[profile.release]
panic = "abort"
lto = true
codegen-units = 1
